# anca

./: .dockerignore  .env.example  .env.production  .gitignore  ANCA.md  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  FIXES_SUMMARY.md  Modelfile-llama3.1-8b  QUICKSTART.md  README.md  TESTING.md  agent_config.json  available_models.txt  check_gemini_models.py  debug_chroma.py  debug_ebay.py  debug_ebay_config.py  debug_job.py  docker-compose.yml  graph_v2.py  issues.txt  main.py  pull_models.sh  pyproject.toml  run_crew.py  run_graph copy.py  run_graph.py  run_sniper.py  sniper.md  strategies.md  test_model_tool_calling.py  test_oauth.py  test_sniper_fixes.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
agents/: README.md  __init__.py  assembler.py  auditor.md  auditor.py  critique.py  fact_checker.py  generator.md  generator.py  planner.py  refiner.py  researcher.md  researcher.py  reviser.py  trend_analyzer.py  writer.py
agents_v2/: __init__.py  base.py  state.py
app/: __init__.py  main.py  state.py  state_sniper.py
data/: topics.json
docs/: 01_CLAUDE_PROPOSED_ARCHITECTURE.md  01_CLAUDE_V2_MIGRATION_PLAN.md  02_GEMINI_architecture_v2.md  02_GEMINI_implementation_plan.md  03_GEMINI_map_reduce_walkthrough.md  04_MODEL_RECOMMENDATIONS.md  AGENT_TOOL_CALLING_ISSUES.md  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  CLI_REFERENCE.md  FIXES_SUMMARY.md  FLOW.md  HYBRID_SEARCH_IMPLEMENTATION.md  MODEL_EXPERIMENTS_LOG.md  P0_FIXES_COMPLETED.md  PROMPT_FIXES_SUMMARY.md  QUICKSTART.md  TESTING.md  (+5 more)
(+92 files in other folders)
